# polyvox

./: .gitignore  Makefile  README.md
backend/: main.py  pyproject.toml
backend/samples/: .gitkeep
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: EnrollSection.tsx  PracticeSection.tsx
frontend/lib/: api.ts  hooks.ts  store.ts
